k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nitte-merch
  labels:
    name: nitte-merch
